--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,10 +88,10 @@ jobs:
           at: .
       - run: 
           name: Add Nuget
-          command: dotnet nuget add source packages --name Local
+          command: dotnet nuget add source ~/packages --name Local
       - run: 
           name: Add Nuget
-          command: dotnet nuget list source
+          command: dotnet nuget list
       - run: ls -l 
       - run: 
           name: Restore
