--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,13 +89,12 @@ jobs:
       - run: 
           name: Add Nuget
           command: dotnet nuget add source ~/packages --name Local
-      - run: 
-          name: Add Nuget
-          command: dotnet nuget list source
       - run: ls -l 
       - run: 
           name: Restore
-          command: dotnet restore src/mathtone-magic.sln
+          command: |
+            dotnet nuget add source ~/packages --name Local
+            dotnet restore src/mathtone-magic.sln --verbosity normal
       # - swapref:
       #     proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
       #     ref: ../Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
