--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,7 @@ jobs:
       - run: 
           name: Restore
           command: |
+            dotnet new  new nugetconfig
             dotnet restore src/mathtone-magic.sln --verbosity normal
       # - swapref:
       #     proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
