--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,20 @@ jobs:
           command: |
             dotnet new nugetconfig
             dotnet nuget add source ~/packages --name Local
+      - swapref:
+          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
+          pkg: Mathtone.Sdk.Common
+
+      - swapref:
+          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
+          pkg: Mathtone.Sdk.Logging
+      
+      - swapref:
+          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
+          pkg: Mathtone.Sdk.Utilities
       # - run: ls -l 
       # - run: 
       #     name: Restore
