--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
           name: Add Nuget
           command: |
             dotnet new nugetconfig
+            dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org
             dotnet nuget add source ~/packages --name Local
       
       - swapref:
