--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,9 +89,8 @@ jobs:
       - run: 
           name: Add Nuget
           command: |
-           
             dotnet nuget add source ~/packages --name Local
-      
+            dotnet restore src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
       - swapref:
           proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
           ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
