--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ jobs:
           command: |
             dotnet new nugetconfig
             ls -l
+            dotnet nuget list source
             dotnet nuget add source ~/packages --name Local --configfile nuget.config
             dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget --configfile nuget.config
             dotnet restore src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
