--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,12 @@ jobs:
           proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
           ref: ../Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
           pkg: Mathtone.Sdk.Logging
-
+      - pack-proj:
+          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Testing.Xunit.csproj
+      - persist_to_workspace:
+          root: .
+          paths:
+            - packages
   # pack-sdk-data:
   #   docker:
   #     - image: mcr.microsoft.com/dotnet/sdk:6.0
