--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,12 +158,12 @@ workflows:
       # - pack-testing-xunit:
       #     requires:
       #       - pack-core
-      # - pack-sdk-data-sql:
-      #     requires:
-      #       - pack-sdk-data
-      # - pack-sdk-data-npgsql:
-      #     requires:
-      #       - pack-sdk-data
+      - pack-sdk-data-sql:
+          requires:
+            - pack-core
+      - pack-sdk-data-npgsql:
+          requires:
+            - pack-core
 
 
 
