--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,13 @@ jobs:
           root: .
           paths:
             - packages/Mathtone.Sdk.Data.Npgsql.*.nupkg
+  test-core:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
+    working_directory: /mnt/ramdisk
+    steps:
+      - attach_workspace:
+          at: .
 
   publish-artifactory:
     docker:
@@ -169,6 +176,9 @@ workflows:
           requires:
             - pack-core
       - pack-sdk-data-npgsql:
+          requires:
+            - pack-core
+      - test-core:
           requires:
             - pack-core
 
