--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,12 +154,12 @@ jobs:
       
       - swapref:
           proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
-          ref: ..\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj
+          ref: ../Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
           pkg: Mathtone.Sdk.Data.Sql
       
       - swapref:
           proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
-          ref: ..\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
           pkg: Mathtone.Sdk.Testing.Xunit
 
       - run: dotnet test src/mathtone-magic.sln
