--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
     working_directory: /mnt/ramdisk
     steps:
       - checkout
+      - run: dotnet build src/tools/analyze-solution/analyze-solution.csproj -o tools
+      - run: ls -l tools
       - run: |
           branch=$CIRCLE_BRANCH
           ver=${branch/"release/"/""}
