--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
     working_directory: /mnt/ramdisk
     steps:
       - checkout
+      - run: ls -l
       - run: mkdir tools
       - run: dotnet build tools/analyze-solution/analyze-solution.csproj --output tools
       - run: ls -l tools
