--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run: ls -l
       - run: mkdir temp
       - run: dotnet build tools/analyze-solution/analyze-solution.csproj --output temp
-      - run: dotnet run temp/analyze-solution
+      - run: dotnet temp/analyze-solution.dll
       - run: |
           branch=$CIRCLE_BRANCH
           ver=${branch/"release/"/""}
