--- a/tools/analyze-solution/Properties/launchSettings.json
+++ b/tools/analyze-solution/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "analyze-solution": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\mike\\mathtone-magic\\src\\mathtone-magic.sln"
+      "commandLineArgs": "../../../../../src/mathtone-magic.sln"
     }
   }
 }
