--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run: ls -l
       - run: mkdir temp
       - run: dotnet build tools/analyze-solution/analyze-solution.csproj --output temp
-      - run: dotnet temp/analyze-solution.dll
+      - run: dotnet temp/analyze-solution.dll src/mathtone-magic.sln
       - run: |
           branch=$CIRCLE_BRANCH
           ver=${branch/"release/"/""}
