--- a/src/sdk/Directory.Build.props
+++ b/src/sdk/Directory.Build.props
@@ -7,5 +7,6 @@
 	<Copyright>2022 Mathtone Industries</Copyright>
 	<RepositoryUrl>https://github.com/mathtone/mathtone-magic</RepositoryUrl>
 	<VersionPrefix>1.0.0</VersionPrefix>
+	<IsPackable>true</IsPackable>
  </PropertyGroup>
 </Project>
