--- a/tools/build-util/build-util.csproj
+++ b/tools/build-util/build-util.csproj
@@ -1,22 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>analyze_solution</RootNamespace>
+    <RootNamespace>build_util</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>AnalyzeSolution.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="Microsoft.Build" Version="17.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\sdk\Mathtone.Sdk.Common\Mathtone.Sdk.Common.csproj" />
     <ProjectReference Include="..\..\src\sdk\Mathtone.Sdk.Logging.Console\Mathtone.Sdk.Logging.Console.csproj" />
   </ItemGroup>
 
