--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,9 @@ jobs:
       - run: ls -l
       - run: mkdir temp
       - run: dotnet build tools/build-util/build-util.csproj --output temp
+      - run: ls -l temp
       - run: dotnet temp/build-util.dll src/mathtone-magic.sln
+
       - run: |
           branch=$CIRCLE_BRANCH
           ver=${branch/"release/"/""}
