--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -8,6 +8,7 @@
 			"Mathtone.Sdk.Data",
 			"Mathtone.Sdk.Data.Sql",
 			"Mathtone.Sdk.Data.Npgsql"
-		]
+		],
+		"PackageDirectory":  "packages"
 	}
 }
