--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -9,6 +9,7 @@
 			"Mathtone.Sdk.Data.Sql",
 			"Mathtone.Sdk.Data.Npgsql"
 		],
-		"PackageDirectory":  "packages"
+		"PackageDirectory": "packages",
+		"Verbosity": "Quiet"
 	}
 }
