--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,8 @@ jobs:
       - run: dotnet temp/build-util.dll src/mathtone-magic.sln
       - run: dotnet restore src/mathtone-magic.sln
       - run: dotnet nuget remove source nuget.org
+      - run: dotnet nuget remove source ~/packages -n local
+      - run: dotnet nuget list source
       - run: bash temp/process-sln.sh
       - run: |
           branch=$CIRCLE_BRANCH
