--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
       - run: dotnet nuget add source /mnt/ramdisk/packages -n local
       - run: dotnet nuget list source
       - run: bash temp/process-sln.sh
+      - run: dotnet test src/mathtone-magic.sln
       - run: |
           branch=$CIRCLE_BRANCH
           ver=${branch/"release/"/""}
