--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,8 @@ jobs:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
+      - attach_workspace:
+          at: .
       - run: bash temp/process-sln.sh
 
   pack-core:
